--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,3 +15,10 @@ li {
 	content: '*';
 	color: 'red';
 }
+
+.image-upload > input {
+	display: none
+}
+.image-upload > label {
+	cursor: pointer
+}
