--- a/app/views/store/departments/_department.html.haml
+++ b/app/views/store/departments/_department.html.haml
@@ -1,7 +1,7 @@
 %turbo-frame{id: d.id, data:{turbo:{action: "advance"}}}
 	.d-flex.border.border-dark.mb-4
-		.flex-grow-1.p-2
+		.flex-grow-1.p-2.m-2.mb-0
 			%a.nav-link{href: department_path(d.slug), data:{turbo:{frame: "content"}}} #{d.name}
-		.p-2
+		.p-2.m-2.mb-0
 			%a.btn.btn-light.border.border-dark{href: edit_department_path(d.slug), aria:{label: "Edit"}}
 				%i.bi.bi-pencil{aria:{hidden: "true"}}
