--- a/app/views/store/products/_product.html.haml
+++ b/app/views/store/products/_product.html.haml
@@ -1,6 +1,6 @@
 %turbo-frame{id: p.id, data:{turbo:{action: "advance"}}}
 	.d-flex.border.border-dark.mb-4
-		.flex-grow-1.p-2
+		.flex-grow-1.p-2.m-2.mb-0
 			%a.nav-link{href: product_path(p, manage: true), data:{turbo:{frame: "content"}}}
 				= p.name
 		
