--- a/app/views/store/departments/index.html.haml
+++ b/app/views/store/departments/index.html.haml
@@ -1,8 +1,8 @@
-%turbo-frame{id: "content", data:{turbo:{action: "advance"}}}
+%turbo-frame{id: "content", data:{controller: "bootstrap", turbo:{action: "advance"}}}
 	.row.bg-dark.text-light
 		.d-flex
 			.p-2
-				%a.btn.btn-dark.btn-lg.text-light.border.border-light{href: manage_path, data:{turbo:{frame: "content"}, bs:{toggle: "tooltip", placement: "bottom", title: "Back to Dashboard"}}, aria:{label: "Back to Dashboard"}}
+				%a.btn.btn-dark.btn-lg.text-light.border.border-light{href: store_management_path, data:{turbo:{frame: "content"}, bs:{toggle: "tooltip", placement: "bottom", title: "Back to Dashboard"}}, aria:{label: "Back to Dashboard"}}
 					%i.bi.bi-arrow-left-circle-fill{aria:{hidden: "true"}}
 			.flex-grow-1.p-2
 				%h2 Departments
