--- a/app/views/store/departments/show.html.haml
+++ b/app/views/store/departments/show.html.haml
@@ -1,4 +1,4 @@
-%turbo-frame{id: "content", data:{turbo:{action: "advance"}}}
+%turbo-frame{id: "content", data:{controller: "bootstrap", turbo:{action: "advance"}}}
 	.row.bg-dark.text-light
 		.d-flex
 			.p-2
