--- a/app/views/store/product_categories/_product_category.html.haml
+++ b/app/views/store/product_categories/_product_category.html.haml
@@ -1,8 +1,8 @@
 %turbo-frame{id: c.id, data:{turbo:{action: "advance"}}}
 	.d-flex.border.border-dark.mb-4
-		.flex-grow-1.p-2
+		.flex-grow-1.p-2.m-2.mb-0
 			%a.nav-link{href: product_category_path(c.slug), data:{turbo:{frame: "content"}}}
 				= c.name
-		.p-2
+		.p-2.m-2.mb-0
 			%a.btn.btn-light.border.border-dark{href: edit_product_category_path(c.slug), aria:{label: "Edit"}}
 				%i.bi.bi-pencil{aria:{hidden: "true"}}
