--- a/app/views/store/product_categories/show.html.haml
+++ b/app/views/store/product_categories/show.html.haml
@@ -1,8 +1,8 @@
-%turbo-frame{id: "content", data:{turbo:{action: "advance"}}}
+%turbo-frame{id: "content", data:{controller: "bootstrap", turbo:{action: "advance"}}}
 	.row.bg-dark.text-light
 		.d-flex
 			.p-2
-				%a.btn.btn-dark.btn-lg.text-light.border.border-light{href: department_path(@category.department.slug), data:{turbo:{frame: "content"}, bs:{toggle: "tooltip", placement: "bottom", title: "Back to Department"}}, aria:{label: "Back to Department"}}
+				%a.btn.btn-dark.btn-lg.text-light.border.border-light{href: department_path(@department.slug), data:{turbo:{frame: "content"}, bs:{toggle: "tooltip", placement: "bottom", title: "Back to #{@department.name}"}}, aria:{label: "Back to #{@department.name}"}}
 					%i.bi.bi-arrow-left-circle-fill{aria:{hidden: "true"}}
 			.flex-grow-1.p-2
 				%h2 Product Category
@@ -21,12 +21,12 @@
 			.flex.col.p-2.m-2
 				= @category.slug
 		.text-muted.mb-4
-			%span A slug is an unique name used in the URL path in place of the ID of the item.  So departments can be found at https://store.dbsan.org/product_categoriess/[slug].  
+			%span A slug is an unique name used in the URL path in place of the ID of the item.  So product categories can be found at https://store.dbsan.org/product_categories/[slug].  
 		.d-flex.border.border-dark.mb-4
 			.flex.col.p-2.m-2
 				%strong Department:
 			.flex.col.p-2.m-2
-				= @category.department.name
+				= @department.name
 		
 
 		%h3 Products
