--- a/app/views/store/product_image_sets/new.html.haml
+++ b/app/views/store/product_image_sets/new.html.haml
@@ -3,8 +3,8 @@
 		= form_with(model: @image_set) do |f|
 			.p-4
 				.form-floating.mb-4
-					= f.text_field :label, placeholder: "Label", class: "form-control border border-dark"
-					= f.label :label, "Label"
+					= f.text_field :label, placeholder: "Image Set Label", class: "form-control border border-dark"
+					= f.label :label, "Image Set Label"
 
 			.container
 				= f.hidden_field :product_id, value: @product.id
