implemented GCS connections

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -11,4 +11,5 @@
       %h3 #{link_to c.title, camp_path(c)}
 
       %p.text-muted From #{c.start.strftime("%A, %B %d, %Y %l:%M %p")} to #{c.end.strftime("%A, %B %d, %Y %l:%M %p (EST)")}
+    = humanize_bytes(1024)
     
