--- a/app/views/channels/my_channel/show.html.haml
+++ b/app/views/channels/my_channel/show.html.haml
@@ -1,3 +1,3 @@
-%h1 Hellow World
+- if @channel.name =="ILY by Tricio"
+	= render partial: "channels/my_channel/ilybytricio", locals: {channel: @channel}
 
-%h2 Welcome to #{@channel.name}!
