--- a/app/views/videos/new.html.haml
+++ b/app/views/videos/new.html.haml
@@ -1,19 +1,17 @@
-%turbo-frame{id: "main", data:{turbo:{frame: "advance"}}}
-	.container.mt-4
-		= form_with(model: @video, html: {data:{controller: "upload-progress"}}) do |f|
-			.image-upload{id: "file_field", data:{upload:{progress:{target: "file_field"}}}}
-				= f.label :original_upload, "Upload Video", class: "btn btn-dark btn-lg text-light"
-				= f.file_field :original_upload, direct_upload: true, data:{action: "change->upload-progress#showProgress"}
-			-#.progress{style: "height: 50px"}
-				-#.progress-bar.bg-dark.text-white.text-start{role: "progressbar", style: "width: 20%;", aria:{label: "Example with label" , valuenow: "0", valuemin: "0", valuemax: "100"}}
-					
-			%div{style: "display: none", data:{upload:{progress:{target: "progress"}}}}
-				#progress-bar{style: "background: gray; position: relative; width: 100%; height: 2.5rem"}
-					%div.position-absolute.top-0.start-0.text-white.p-2{style: "width: 100%; height: 100%; background: transparent; z-index: 2"} 
-						%span#progressText{data:{upload:{progress:{target: "progressText"}}}} Warming up...
-					#progressWidth.position-absolute.top-0.start-0{style: "width: 0%; height: 100%; background: green;", data:{upload:{progress:{target: "progressWidth"}}}}
-      
-						
+%turbo-frame{id: "upload_button", data:{controller: "uploads", uploads_target: "uploadButtonFrame", uploads_file_field: "file_field_1", uploads_for: "video"}}
+	.row.h-100{style: "background: #bfbfbf"}
+		.align-self-center.text-center
+			%p Please upload a video by clicking the button below.
+			.image-upload
+				%label.btn.btn-dark.btn-lg.text-light{for: "file_field_1"} Upload Video
+				%input{id: "file_field_1", type: "file", multiple: "true", data:{action: "change->uploads#createRecords", direct_upload_url: rails_direct_uploads_url }}
+	.d-none
+		= form_with(model: @upload) do |f|
+			= f.hidden_field :file_list, data:{uploads_target: "file_list"}
+			= f.hidden_field :for, data:{uploads_target: "for"}
+			= f.hidden_field :for_id, data:{uploads_target: "for_id"}
+			= f.hidden_field :input_id, data:{uploads_target: "inputId"}
+			= f.submit "create", data:{uploads_target: "submit"}
+
+%turbo-frame{id: "content", data:{uploads_target: "contentFrame", turbo:{action: "advance"}}}
 				
-					
-			
