disabled cloud storage, using public accessed URLs for now

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -1,6 +1,5 @@
 .container.pt-4
-	- if channel.brand_logo.attached?
-		.text-center
-			%img{src: url_for(channel.brand_logo), width: "50%", alt: "ILY by Tricio Logo"}
+	.text-center
+		%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "50%", alt: "ILY by Tricio Logo"}
 	%h1 Products
 	
