added product tiles

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -1,5 +1,19 @@
 .container.pt-4
 	.text-center
 		%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "50%", alt: "ILY by Tricio Logo"}
-	%h1 Products
+	%h1.text-center Products
+
+	.row.mt-4
+		.col-md-4.border.border-dark.p-4
+			%h2.text-center Dark Chocolate Chip Cookie
+		.col-md-4.border.border-dark.p-4
+			%h2.text-center Pumpkin Dark Chocolate Chip Cookie
+		.col-md-4.border.border-dark.p-4
+			%h2.text-center Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
+		.col-md-4.border.border-dark.p-4
+			%h2.text-center Oatmeal Pumpkin Pie Spiced Raisin Cookie
+		.col-md-4.border.border-dark.p-4
+			%h2.text-center Pumpkin Pie Spiced Sugar Cookie
+		.col-md-4.border.border-dark.p-4
+			%h2.text-center Peanut Butter Cookie
 	
