updated ILY by Tricio page with product photos

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -1,19 +1,45 @@
+%nav.navbar.bg-dark
+	.container
+		%a.navbar-brand{href: "#", style: "color: gold"} 
+			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
+			ILY by Tricio
 .container.pt-4
-	.text-center
-		%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "50%", alt: "ILY by Tricio Logo"}
 	%h1.text-center Products
-
-	.row.mt-4
-		.col-md-4.border.border-dark.p-4
-			%h2.text-center Dark Chocolate Chip Cookie
-		.col-md-4.border.border-dark.p-4
-			%h2.text-center Pumpkin Dark Chocolate Chip Cookie
-		.col-md-4.border.border-dark.p-4
-			%h2.text-center Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
-		.col-md-4.border.border-dark.p-4
-			%h2.text-center Oatmeal Pumpkin Pie Spiced Raisin Cookie
-		.col-md-4.border.border-dark.p-4
-			%h2.text-center Pumpkin Pie Spiced Sugar Cookie
-		.col-md-4.border.border-dark.p-4
-			%h2.text-center Peanut Butter Cookie
-	
+	.row
+		.col-sm-6.col-md-4.mt-4
+			.card
+				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
+				.card-body
+					%h2.card-title.text-center Dark Chocolate Chip Cookie
+		.col-sm-6.col-md-4.mt-4
+			.card
+				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
+				.card-body
+					%h2.card-title.text-center Pumpkin Dark Chocolate Chip Cookie
+		.col-sm-6.col-md-4.mt-4
+			.card
+				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
+				.card-body
+					%h2.card-title.text-center Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
+		.col-sm-6.col-md-4.mt-4
+			.card
+				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-raisin-cookie.png", width: "100%", alt: ""}
+				.card-body
+					%h2.card-title.text-center Oatmeal Pumpkin Pie Spiced Raisin Cookie
+		.col-sm-6.col-md-4.mt-4
+			.card
+				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/peanut-butter-cookie.png", width: "100%", alt: ""}
+				.card-body
+					%h2.card-title.text-center Peanut Butter Cookie
+		.col-sm-6.col-md-4.mt-4
+			.card
+				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-pie-spiced-sugar-cookie.png", width: "100%", alt: ""}
+				.card-body
+					%h2.card-title.text-center Pumpkin Pie Spiced Sugar Cookie
+			
