updated ILY by Tricio by adding the buttons to go to Square

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -5,41 +5,83 @@
 			ILY by Tricio
 .container.pt-4
 	%h1.text-center Products
-	.row
-		.col-sm-6.col-md-4.mt-4
+	.row.mb-4
+		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
 				.card-body
-					%h2.card-title.text-center Dark Chocolate Chip Cookie
-		.col-sm-6.col-md-4.mt-4
+					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Dark Chocolate Chip Cookie
+					.row.mb-3
+						.btn.btn-lg.btn-dark 5 for $10
+					.row.mb-3
+						.btn.btn-lg.btn-dark 12 for $20
+					.row.mb-3
+						.btn.btn-lg.btn-dark Batch Pricing
+		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
 				.card-body
-					%h2.card-title.text-center Pumpkin Dark Chocolate Chip Cookie
-		.col-sm-6.col-md-4.mt-4
+					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Pumpkin Dark Chocolate Chip Cookie
+					.row.mb-3
+						.btn.btn-lg.btn-dark 5 for $10
+					.row.mb-3
+						.btn.btn-lg.btn-dark 12 for $20
+					.row.mb-3
+						.btn.btn-lg.btn-dark Batch Pricing
+		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
 				.card-body
-					%h2.card-title.text-center Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
-		.col-sm-6.col-md-4.mt-4
+					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
+					.row.mb-3
+						.btn.btn-lg.btn-dark 5 for $10
+					.row.mb-3
+						.btn.btn-lg.btn-dark 12 for $20
+					.row.mb-3
+						.btn.btn-lg.btn-dark Batch Pricing
+		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-raisin-cookie.png", width: "100%", alt: ""}
 				.card-body
-					%h2.card-title.text-center Oatmeal Pumpkin Pie Spiced Raisin Cookie
-		.col-sm-6.col-md-4.mt-4
+					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Pumpkin Pie Spiced Raisin Cookie
+					.row.mb-3
+						.btn.btn-lg.btn-dark 5 for $10
+					.row.mb-3
+						.btn.btn-lg.btn-dark 12 for $20
+					.row.mb-3
+						.btn.btn-lg.btn-dark Batch Pricing
+		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/peanut-butter-cookie.png", width: "100%", alt: ""}
 				.card-body
-					%h2.card-title.text-center Peanut Butter Cookie
-		.col-sm-6.col-md-4.mt-4
+					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Peanut Butter Cookie
+					.row.mb-3
+						.btn.btn-lg.btn-dark 5 for $10
+					.row.mb-3
+						.btn.btn-lg.btn-dark 12 for $20
+					.row.mb-3
+						.btn.btn-lg.btn-dark Batch Pricing
+		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-pie-spiced-sugar-cookie.png", width: "100%", alt: ""}
 				.card-body
-					%h2.card-title.text-center Pumpkin Pie Spiced Sugar Cookie
+					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
+						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Pumpkin Pie Spiced Sugar Cookie
+					.row.mb-3
+						.btn.btn-lg.btn-dark 5 for $10
+					.row.mb-3
+						.btn.btn-lg.btn-dark 12 for $20
+					.row.mb-3
+						.btn.btn-lg.btn-dark Batch Pricing
 			
