updated links to Square and removed old caption file

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -14,11 +14,11 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Dark Chocolate Chip Cookie
 					.row.mb-3
-						.btn.btn-lg.btn-dark 5 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/RMWWJ4XPMCHB5YC7E2UHXBRB", role: "button"} 5 for $10
 					.row.mb-3
-						.btn.btn-lg.btn-dark 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/3EVRK5OV7SF3THS3ELQPI37F", role: "button"} 12 for $20
 					.row.mb-3
-						.btn.btn-lg.btn-dark Batch Pricing
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/PQJWIM2ILIF7KICXXKT3F6WK", role: "button"} Batch Pricing
 		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
@@ -27,11 +27,11 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Pumpkin Dark Chocolate Chip Cookie
 					.row.mb-3
-						.btn.btn-lg.btn-dark 5 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/DHGTB6IMLNZVELZOWH3HRNG5", role: "button"} 5 for $10
 					.row.mb-3
-						.btn.btn-lg.btn-dark 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/OTPOD4OQITHMDVGQ3P7EYKRK", role: "button"} 12 for $20
 					.row.mb-3
-						.btn.btn-lg.btn-dark Batch Pricing
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/TSZZ2DRVUOOYWMVA4C7MZQ3G", role: "button"} Batch Pricing
 		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
@@ -40,11 +40,11 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
 					.row.mb-3
-						.btn.btn-lg.btn-dark 5 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/DCHOD44N6U4U6GSLNWSKK2C5", role: "button"} 5 for $10
 					.row.mb-3
-						.btn.btn-lg.btn-dark 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/HQN6YZXKXKXLLARMS3RTN7WK", role: "button"} 12 for $20
 					.row.mb-3
-						.btn.btn-lg.btn-dark Batch Pricing
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/BSC7TRK2TEVSSJRGT3E3Z2OP", role: "button"} Batch Pricing
 		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
@@ -53,11 +53,11 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Pumpkin Pie Spiced Raisin Cookie
 					.row.mb-3
-						.btn.btn-lg.btn-dark 5 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/3I3V7UADGUFKAHKBH4AEITWC", role: "button"} 5 for $10
 					.row.mb-3
-						.btn.btn-lg.btn-dark 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/CQIXKHUYHAZXAB5URSCAANBD", role: "button"} 12 for $20
 					.row.mb-3
-						.btn.btn-lg.btn-dark Batch Pricing
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/7OBIVIATXQETB3JE75ZBWXWI", role: "button"} Batch Pricing
 		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
@@ -66,11 +66,11 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Peanut Butter Cookie
 					.row.mb-3
-						.btn.btn-lg.btn-dark 5 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/QOTX2DIDDW3XEQSDLZIKBFGD", role: "button"} 5 for $10
 					.row.mb-3
-						.btn.btn-lg.btn-dark 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/KDRBVDEQJLFKEAEXGYE4AEUT", role: "button"} 12 for $20
 					.row.mb-3
-						.btn.btn-lg.btn-dark Batch Pricing
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/V4SPRWRDYUMQFPOJS5UWKDIL", role: "button"} Batch Pricing
 		.col-sm-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
@@ -79,9 +79,13 @@
 					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
 						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Pumpkin Pie Spiced Sugar Cookie
 					.row.mb-3
-						.btn.btn-lg.btn-dark 5 for $10
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/EWO4ADOM3Q5IJV3K2ZCDF4RN", role: "button"} 5 for $10
 					.row.mb-3
-						.btn.btn-lg.btn-dark 12 for $20
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/ITSS5GUOSE5OULAMSPRMXG5Q", role: "button"} 12 for $20
 					.row.mb-3
-						.btn.btn-lg.btn-dark Batch Pricing
+						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/4VSA4ON54TN767247QGDWCFA", role: "button"} Batch Pricing
 			
+
+	.col-md-8.mb-4.mt-4.mx-auto
+		%h2.text-center Disclaimer
+		%p.text-center Any food products produced by ILY by Tricio are homemade and not subject to state inspection.
