updated video file and added new captions to public directory

--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -1,5 +1,5 @@
 .container.mb-4
-	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true"}
+	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio%202.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true"}
 		%track{src: "/captions-en.vtt", srclang: "en", label: "English (CC)", kind: "captions"}
 	%h1.mb-4 #{video.title}	
 	.col-md-8.mt-4.mx-auto
@@ -10,7 +10,7 @@
 
 		%p.border.border-dark.p-4
 			%em VISUAL DESCRIPTION: 
-			The following text is displayed, centered, in large golden lettering: "ILY at Deaf Equity's Deaf Ecosystem".  Below this is more text, in golden lettering, but smaller font, which says: "Charles Thompson Hall, St. Paul, October 23, 2022".
+			The following text is displayed, centered, in large golden, bold-faced lettering: "ILY by Tricio at Deaf Equity's Deaf Ecosystem".  Below this is more text, in golden lettering, but smaller font, which says: "Charles Thompson Hall, St. Paul, October 23, 2022, 1PM to 4PM".
 
 		%p Hello! Hi! My name is Patrick Vellia. I'm the owner of "I love You by Tricio". I set up a MN food producer, Cottage Food Producer business, which means I make food at home to sell at different events.
 
@@ -18,7 +18,11 @@
 
 		%p Some are Dark Chocolate Chip Cookies. Some are Dark Chocolate Chip Pumpkin Spiced Cookies. Some are Oatmeal Pumpkin Pie Spiced Cookies with Chocolate Chip. There are also Pumpkin Pie Spice Oatmeal Cookies with Raisins. There's Peanut Butter Cookies, and Sugar Cookies. 
 
-		%p Individual cookies cost $2.50. 10 cookies are 10 for $5, and a dozen, is 12. 
+		%p Individual cookies cost $2.50. 5 for $10, and a dozen, is 12.
+
+		%p.border.border-dark.p-4
+			%em VISUAL DESCRIPTION:
+			The following text appears in large, golden, bold-faced lettering: "OOPS!".  Below that is more text in smaller font: "That should have said one dozen for $20.  My apologies. . . "." 
 
 		%p You can pre-order through my website. There'll be a QR code available at on this video, and you can pre-order. And I can bring everything there to the booth at the Deaf Equity event on October 23rd. 
 
