updated routing for videos to channels

--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -1,3 +1,8 @@
+%nav.navbar.bg-dark
+	.container
+		%a.navbar-brand{href: "#", style: "color: gold"} 
+			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
+			ILY by Tricio
 .container.mb-4
 	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio%202.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true"}
 		%track{src: "/captions-en.vtt", srclang: "en", label: "English (CC)", kind: "captions"}
