--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -2,4 +2,4 @@
 	%h1 Videos
 
 	- @videos.each do |v|
-		= link_to v.title, video_path(v)
+		= link_to v.title, video_path(v, subdomain: @subdomain)
