--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -4,7 +4,7 @@
 			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
 			ILY by Tricio
 .container.mb-4
-	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio%202.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true"}
+	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio%202.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true", width: "100%"}
 		%track{src: "/captions-en.vtt", srclang: "en", label: "English (CC)", kind: "captions"}
 	%h1.mb-4 #{video.title}	
 	.col-md-8.mt-4.mx-auto
