--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -9,37 +9,37 @@
 	%h1.mb-4 #{video.title}	
 	.col-md-8.mt-4.mx-auto
 		%h2.mb-3 Transcript
-		%p.border.border-dark.p-4
-			%em VISUAL DESCRIPTION: 
-			A ILY by Tricio logo fades into the screen.  This logo is a crimsom left hand in the ASL hand-shape of ILY with golden cursive lettering on the palm of the hand spelling out "by Tricio".
+		.border.border-dark.p-1.ps-0.mt-4.mb-4
+			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION: 
+			%p.m-4 A ILY by Tricio logo fades into the screen.  This logo is a crimsom left hand in the ASL hand-shape of ILY with golden cursive lettering on the palm of the hand spelling out "by Tricio".
 
-		%p.border.border-dark.p-4
-			%em VISUAL DESCRIPTION: 
-			The following text is displayed, centered, in large golden, bold-faced lettering: "ILY by Tricio at Deaf Equity's Deaf Ecosystem".  Below this is more text, in golden lettering, but smaller font, which says: "Charles Thompson Hall, St. Paul, October 23, 2022, 1PM to 4PM".
+		.border.border-dark.p-1.ps-0.mt-4.mb-4
+			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION: 
+			%p.m-4 The following text is displayed, centered, in large golden, bold-faced lettering: "ILY by Tricio at Deaf Equity's Deaf Ecosystem".  Below this is more text, in golden lettering, but smaller font, which says: "Charles Thompson Hall, St. Paul, October 23, 2022, 1PM to 4PM".
 
-		%p Hello! Hi! My name is Patrick Vellia. I'm the owner of "I love You by Tricio". I set up a MN food producer, Cottage Food Producer business, which means I make food at home to sell at different events.
+		%p Hello! I'm Patrick Vellia. I'm the owner of "I Love You by Tricio", I set up a Minnesota food producer, Cottage Food Producer business, which means I make food at home to sell at different events. 
 
-		%p So Deaf Equity is having an event on October 23rdIt will be at Charles Thompson Hall, CTH, in Saint Paul. There'll be a booth there where I'll be selling 6 different types of cookie. 
+		%p So Deaf Equity is having an event on October 23rd. It will be at Charles Thompson Hall (CTH). In Saint Paul. There'll be a booth there where I'll be selling 6 different types of cookies. 
 
-		%p Some are Dark Chocolate Chip Cookies. Some are Dark Chocolate Chip Pumpkin Spiced Cookies. Some are Oatmeal Pumpkin Pie Spiced Cookies with Chocolate Chip. There are also Pumpkin Pie Spice Oatmeal Cookies with Raisins. There's Peanut Butter Cookies, and Sugar Cookies. 
+		%p Some are dark chocolate chip cookies. Some are dark chocolate chip pumpkin cookies. Some are oatmeal pumpkin pie spiced cookies with chocolate chip. There'll also be pumpkin pie spice oatmeal cookies with raisin. There's peanut butter cookies and sugar cookies.  
 
-		%p Individual cookies cost $2.50. 5 for $10, and a dozen, is 12.
+		%p Individual cookies cost $2.50. 5 cookies cost $10, and dozen is 12. 
 
-		%p.border.border-dark.p-4
-			%em VISUAL DESCRIPTION:
-			The following text appears in large, golden, bold-faced lettering: "OOPS!".  Below that is more text in smaller font: "That should have said one dozen for $20.  My apologies. . . "." 
+		.border.border-dark.p-1.ps-0.mt-4.mb-4
+			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION:
+			%p.m-4 The following text appears in large, golden, bold-faced lettering: "OOPS!".  Below that is more text in smaller font: "That should have said one dozen for $20.  My apologies. . . "." 
 
-		%p You can pre-order through my website. There'll be a QR code available at on this video, and you can pre-order. And I can bring everything there to the booth at the Deaf Equity event on October 23rd. 
+		%p You can pre-order through my website. There'll be a QR code available on this video, and you can pre-order. And I can bring everything there to the booth at the Deaf Equity event on October 23rd. 
 
 		%p Thank you, and come on out and support my business.
 
-		%p.border.border-dark.p-4
-			%em VISUAL DESCRIPTION:
-			A QR code with white text below it that says "SCAN ME".  Below the QR code is the following text, in golden lettering, centered: "Pre-Order Today and Pickup at Event: https://ilybytricio.dbsan.org/."
+		.border.border-dark.p-1.ps-0.mt-4.mb-4
+			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION:
+			%p.m-4 A QR code with white text below it that says "SCAN ME".  Below the QR code is the following text, in golden lettering, centered: "Pre-Order Today and Pickup at Event: https://ilybytricio.dbsan.org/."
 
-		.row.mt-4.mb-4
+		.row.mt-4.mb-4.p-4
 			%a.btn.btn-lg.btn-dark{href: "https://ilybytricio.dbsan.org/", role: "button"} Pre-Order Today and Pickup at Event
 
-		%p.border.border-dark.p-4
-			%em VISUAL DESCRIPTION:
-			A logo appears in the top left corner for ASL OWL and another logo on the top right for ASL ACE.  In the center is the following text, in gold, bold-faced lettering: "Thank You!".  Below this is the folowing text, in gold lettering: "Thanks to ASL OWL for voicing and captioning this video.".
+		.border.border-dark.p-1.ps-0.mt-4.mb-4
+			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION:
+			%p.m-4 A logo appears in the top left corner for ASL OWL and another logo on the top right for ASL ACE.  In the center is the following text, in gold, bold-faced lettering: "Thank You!".  Below this is the folowing text, in gold lettering: "Thanks to ASL OWL for voicing and captioning this video.".
