--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -17,6 +17,10 @@
 			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION: 
 			%p.m-4 The following text is displayed, centered, in large golden, bold-faced lettering: "ILY by Tricio at Deaf Equity's Deaf Ecosystem".  Below this is more text, in golden lettering, but smaller font, which says: "Charles Thompson Hall, St. Paul, October 23, 2022, 1PM to 4PM".
 
+		.border.border-dark.p-1.ps-0.mt-4.mb-4
+			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION: 
+			%p.m-4 A white male in his mid-30's appears on screen.  He is wearing a black short sleeved T-shirt and has brown hair, blue eyes and a scruffy beard.  Also has a hearing aid on his left ear.  
+			
 		%p Hello! I'm Patrick Vellia. I'm the owner of "I Love You by Tricio", I set up a Minnesota food producer, Cottage Food Producer business, which means I make food at home to sell at different events. 
 
 		%p So Deaf Equity is having an event on October 23rd. It will be at Charles Thompson Hall (CTH). In Saint Paul. There'll be a booth there where I'll be selling 6 different types of cookies. 
