--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -46,8 +46,8 @@
 
 		.border.border-dark.p-1.ps-0.mt-4.mb-4
 			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION:
-			%p.m-4 A logo appears in the top left corner for ASL OWL which is an owl in the shape of the sign for INTERPRET has large eyes and wears a black graduation cap. The center of the owl starts out blue and transitions to purple wings.
+			%p.m-4.mb-2 A logo appears in the top left corner for ASL OWL which is an owl in the shape of the sign for INTERPRET has large eyes and wears a black graduation cap. The center of the owl starts out blue and transitions to purple wings.
 
-			%p.m-4 Another logo on the top right for ASL ACE. where the base of the logo is 4 plant leaves opening like a book, two leaves on each side. Arching over the logo is a half circle of people in jewel tones. In the center of the logo is the sign "SUPPORT", the bottom hand and arm has light skin and the top hand and arm has dark skin.
+			%p.m-4.mt-2.mb-2 Another logo on the top right for ASL ACE. where the base of the logo is 4 plant leaves opening like a book, two leaves on each side. Arching over the logo is a half circle of people in jewel tones. In the center of the logo is the sign "SUPPORT", the bottom hand and arm has light skin and the top hand and arm has dark skin.
 
-			%p.m-4 In the center is the following text, in gold, bold-faced lettering: "Thank You!".  Below this is the following text, in gold lettering: "Thanks to ASL OWL for voicing and captioning this video.".
+			%p.m-4.mt-2 In the center is the following text, in gold, bold-faced lettering: "Thank You!".  Below this is the following text, in gold lettering: "Thanks to ASL OWL for voicing and captioning this video.".
