fixed grid layout of video page

--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -3,11 +3,11 @@
 		%a.navbar-brand{href: "#", style: "color: gold"} 
 			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
 			ILY by Tricio
-.container.mb-4
+.container-md.mb-4
 	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio%202.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true", width: "100%"}
 		%track{src: "/captions-en.vtt", srclang: "en", label: "English (CC)", kind: "captions"}
 	%h1.mb-4 #{video.title}	
-	.col-md-8.mt-4.mx-auto
+	.col-lg-8.mt-4.mx-auto
 		%h2.mb-3 Transcript
 		.border.border-dark.p-1.ps-0.mt-4.mb-4
 			%span.bg-dark.text-light.p-2 VISUAL DESCRIPTION: 
@@ -51,17 +51,17 @@
 			%p.m-4.mt-2.mb-2 Another logo on the top right for ASL ACE. where the base of the logo is 4 plant leaves opening like a book, two leaves on each side. Arching over the logo is a half circle of people in jewel tones. In the center of the logo is the sign "SUPPORT", the bottom hand and arm has light skin and the top hand and arm has dark skin.
 
 			%p.m-4.mt-2 In the center is the following text, in gold, bold-faced lettering: "Thank You!".  Below this is the following text, in gold lettering: "Thanks to ASL OWL for voicing and captioning this video.".
-	.col-md-8.mt-4.mx-auto
+	.col-lg-8.mt-4.mx-auto
 		%h2 Contributing Organizations
 		%p Credit goes where credit is due.  To that end, we recognize the following organizations for providing the support for accessible video.
 		.row
-			.col-sm-6.col-md-3
+			.col-6.col-md-3
 				%a.card.text-decoration-none{href: "https://www.aslowl.org", target: "_blank"} 
 					.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 						%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/ASL%20ACE%20Logo.jpg", width: "100%", alt: ""}
 					.card-body
 						%h3.text-dark.text-center ASL ACE
-			.col-sm-6.col-md-3
+			.col-6.col-md-3
 				%a.card.text-decoration-none{href: "https://www.aslowl.org", target: "_blank"} 
 					.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 						%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/ASL%20OWL%20LOGO.png", width: "100%", alt: ""}
