adjusted layout of the products on ILY by Tricio

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -6,7 +6,7 @@
 .container.pt-4
 	%h1.text-center Products
 	.row.mb-4
-		.col-sm-6.col-lg-4.mt-4
+		.col-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
@@ -19,7 +19,7 @@
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/3EVRK5OV7SF3THS3ELQPI37F", role: "button"} 12 for $20
 					.row.mb-3
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/PQJWIM2ILIF7KICXXKT3F6WK", role: "button"} Batch Pricing
-		.col-sm-6.col-lg-4.mt-4
+		.col-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
@@ -32,7 +32,7 @@
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/OTPOD4OQITHMDVGQ3P7EYKRK", role: "button"} 12 for $20
 					.row.mb-3
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/TSZZ2DRVUOOYWMVA4C7MZQ3G", role: "button"} Batch Pricing
-		.col-sm-6.col-lg-4.mt-4
+		.col-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
@@ -45,7 +45,7 @@
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/HQN6YZXKXKXLLARMS3RTN7WK", role: "button"} 12 for $20
 					.row.mb-3
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/BSC7TRK2TEVSSJRGT3E3Z2OP", role: "button"} Batch Pricing
-		.col-sm-6.col-lg-4.mt-4
+		.col-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-raisin-cookie.png", width: "100%", alt: ""}
@@ -58,7 +58,7 @@
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/CQIXKHUYHAZXAB5URSCAANBD", role: "button"} 12 for $20
 					.row.mb-3
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/7OBIVIATXQETB3JE75ZBWXWI", role: "button"} Batch Pricing
-		.col-sm-6.col-lg-4.mt-4
+		.col-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/peanut-butter-cookie.png", width: "100%", alt: ""}
@@ -71,7 +71,7 @@
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/KDRBVDEQJLFKEAEXGYE4AEUT", role: "button"} 12 for $20
 					.row.mb-3
 						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/V4SPRWRDYUMQFPOJS5UWKDIL", role: "button"} Batch Pricing
-		.col-sm-6.col-lg-4.mt-4
+		.col-6.col-lg-4.mt-4
 			.card
 				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
 					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-pie-spiced-sugar-cookie.png", width: "100%", alt: ""}
