--- a/app/views/channels/my_channel/show.html.haml
+++ b/app/views/channels/my_channel/show.html.haml
@@ -1,3 +1,6 @@
 - if @channel.name =="ILY by Tricio"
 	= render partial: "channels/my_channel/ilybytricio", locals: {channel: @channel}
-
+- else
+	.container.pt-4
+		%h1.text-center Hello World
+		%p #{Rails .env}
