--- a/app/views/challenges/index.html.haml
+++ b/app/views/challenges/index.html.haml
@@ -2,3 +2,7 @@
 	%h1 Challenges
 	- if current_user&.admin?
 		= link_to "New Challenge", new_challenge_path
+
+		- @challenges.each do |c|
+			.border.border-dark.p-2
+				= link_to c.title, challenge_path(c)
