--- a/app/views/challenge_participants/new.html.haml
+++ b/app/views/challenge_participants/new.html.haml
@@ -1,7 +1,8 @@
 .col-xl-6.mx-auto.p-4
 	%h1 Challenge Registration
 
-	= form_with(model: @challenge, url: challenge_register_path) do |f|
+	= form_with(model: @registrant, url: challenge_participants_path) do |f|
+		= f.hidden_field :user_id, value: current_user.id
 		.row.mt-4
 			.col-6
 				.form-floating.mb-4
@@ -33,4 +34,7 @@
 		.form-floating.mb-4
 			= f.text_field :country, placeholder: "Country", value: @country, class: "form-control border border-dark"
 			= f.label :country, "Country"
+
+		.row.mt-4
+			= f.submit"Register", class: "btn btn-lg btn-dark"
 		
