--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -14,5 +14,9 @@
 	- unless current_user&.id.in?(@users)
 		.mt-4
 			= link_to "Register Now", new_challenge_participant_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
+	- if current_user&.admin?
+		.mt-4
+			= link_to "Edit", edit_challenge_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
+	
 	.mt-4
 		= simple_format(@challenge.description)
